--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ a {
   font-weight: 400;
 }
 /*while hovering they are underlined and bolded*/
+/*bolding no longer works*/
 a:hover {
 color: #39a78e;
 text-decoration: underline;
@@ -98,30 +99,35 @@ font-weight: 700;
   padding: 8px 16px;
   margin: 0px 16px;
   border-radius: 24px;
-  transition: 0.2s;
+  transition-property: padding border-radius box-shadow;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in;
 }
-/*don't want buttons to change after visited; overriding hyperlink rule*/
+
 .button:visited {
   background-color: #39a78e;
   color: #ffffff;
 text-decoration: none;
 font-weight: 400;
 }
-/*semi-bold when hovered over*/
 .button:hover {
-  background-color: #39a78e;
+  background-color: #2a7a68;
   color: #ffffff;
 text-decoration: none;
 font-weight: 600;
+padding: 8px 24px;
+border-radius: 8px;
+box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
-/*turn sea green when pressed*/
 .button:active {
-  background-color: #2a7a68 !important;
+  background-color: #5a4c43 !important;
   color: #ffffff;
 text-decoration: none;
 font-weight: 600;
+padding: 8px 24px;
+border-radius: 8px;
+box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
-/*same as hovering*/
 .button:focus {
   background-color: #39a78e;
   color: #ffffff;
@@ -138,7 +144,10 @@ font-weight: 600;
   padding: 8px 16px;
   margin: 0px 16px 16px 16px;
   border-radius: 20px;
-  transition: 0.2s;
+  transition-property: padding border-radius box-shadow;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in;
+}
 }
 .button.contact:visited {
   background-color: #c8c3bf;
@@ -147,17 +156,23 @@ text-decoration: none;
 font-weight: 400;
 }
 .button.contact:hover {
-  background-color: #c8c3bf;
-  color: #5a4c43;
+  background-color: #99968a;
+  color: #ffffff;
 text-decoration: none;
 font-weight: 600;
+padding: 8px 24px;
+border-radius: 8px;
+box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
 /*turn espresso when pressed*/
 .button.contact:active {
-  background-color: #5a4c43 !important;
-  color: #ffffff !important;
+  background-color: #5a4c43;
+  color: #ffffff;
 text-decoration: none;
 font-weight: 600;
+padding: 8px 24px;
+border-radius: 8px;
+box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
 .button.contact:focus {
   background-color: #c8c3bf;
@@ -335,3 +350,50 @@ main {
     #skill_tool {
       margin-top: 25px;
     }
+
+.icon {
+  max-height: 42px;
+  margin-bottom: 24px;
+}
+
+/*define keyframe rules*/
+@keyframes chick-drop {
+  from {transform: translate(0,-20px);}
+  to {transform: translate(0,0px);}
+}
+
+.person {
+  animation-duration: 2s;
+  animation-name: chick-drop;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: ease;
+}
+
+@keyframes city-appear {
+  0% {opacity: 20%;}
+  50% {opacity: 60%;}
+  100% {opacity: 100%;}
+}
+
+.landscape {
+  animation-duration: 2s;
+  animation-name: city-appear;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  animation-timing-function: ease-in;
+}
+
+@keyframes ground-grow {
+  from {transform: scale(0.2);}
+  to {transform: scale(1);}
+}
+
+.ground {
+  animation-duration: 2s;
+  animation-name: ground-grow;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  animation-timing-function: ease;
+}
+/*create animation rules for the class*/
