--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
   color: #16171b;
 }
 h1, h2, h3, h4 {
-  line-height 1.4;
+  line-height: 1.4;
   color: #5a4c43;
 }
 h1 {
@@ -99,7 +99,7 @@ font-weight: 700;
   padding: 8px 16px;
   margin: 0px 16px;
   border-radius: 24px;
-  transition-property: padding border-radius box-shadow;
+  transition-property: padding, border-radius, box-shadow;
   transition-duration: 0.2s;
   transition-timing-function: ease-in;
 }
@@ -144,11 +144,11 @@ font-weight: 600;
   padding: 8px 16px;
   margin: 0px 16px 16px 16px;
   border-radius: 20px;
-  transition-property: padding border-radius box-shadow;
+  transition-property: padding, border-radius, box-shadow;
   transition-duration: 0.2s;
   transition-timing-function: ease-in;
 }
-}
+
 .button.contact:visited {
   background-color: #c8c3bf;
   color: #5a4c43;
@@ -276,6 +276,23 @@ header {
   width: 100%;
   position: fixed;
 }
+
+#cvbutton {
+  width: 100%;
+  display: block;
+  margin-top: 20px;
+  padding: 50px;
+}
+/*can't figure out how to get the background color to go up to the separator.*/
+#prototypes {
+  background-color: rgba(221,220,216,0.5);
+  padding: 25px 0px;
+}
+/*how do I make the shadow all around?*/
+a > picture:hover {
+    box-shadow: 6px 6px 6px 4px rgba(46, 52, 64, 0.5);
+}
+
 /*this looks crappy but want to remember the general code.
 .logo:hover {
   box-shadow: 3px 3px 2px rgba(46, 52, 64, 0.5);
@@ -315,8 +332,8 @@ main {
   }
 }
 /*60:40 split for large screens*/
-@media only screen and (min-width: 1024) {
-      } /*no longer center header*/
+@media only screen and (min-width: 1024px) {
+      /*no longer center header*/
       nav {
           width: auto;
           float: right;
