--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,8 @@ opacity: 0.6;
 /*limit size of logo*/
 .logo {
   max-width: 48px;
+  margin-top: 16px;
+  margin-left: 7px;
 }
 .logo:hover {
   max-width: 52px;
@@ -223,8 +225,15 @@ opacity: 0.6;
 header {
   background-color: rgba(22,23,27,.9);
   padding: 10px 0 4px;
+  box-shadow: 0px 6px 4px rgba(46, 52, 64, 0.5);
+  width: 100%;
+  position: fixed;
 }
 /*style nav*/
+nav {
+  display: inline-block;
+  width: 100%;
+}
 /*remove bullets and extra margin*/
 nav > ul {
   list-style-type: none;
@@ -232,9 +241,16 @@ nav > ul {
   margin: 0;
 }
 
+nav > ul > li {
+  display: inline-block;
+  list-style-type: none;
+  padding: 0;
+}
+
 /*style text and spacing*/
 nav > ul > li > a {
-  padding: 0 8px;
+  display: inline-block;
+  padding: 0 15px;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 1.2em;
@@ -264,12 +280,7 @@ nav > ul > li > a:focus {
   display: block;
   width: 100%;
 }
-/*distinguish and fix the header position*/
-header {
-  box-shadow: 0px 6px 4px rgba(46, 52, 64, 0.5);
-  width: 100%;
-  position: fixed;
-}
+
 
 /*this looks crappy but want to remember the general code.
 .logo:hover {
@@ -292,7 +303,7 @@ main {
       float: right;
   }
   .logo {
-    margin: 7px 0px;
+    margin: 15px 0px;
   } /*so that it lines up with nav*/
   .col-md-6 {
     width: 50%;
@@ -318,7 +329,7 @@ main {
           float: right;
       }
       .logo {
-        margin: 7px 0px;
+        margin: 11px 7px 0px 7px;
       } /*so that it lines up with nav*/
       .col-lg-7 {
         width: 60%;
@@ -355,28 +366,10 @@ main {
 
 /*style toggle menu*/
 /*hide everything except the menu icon*/
+
 .navtoggle li:not(:last-child) {
   display: none;
 }
-
-@media only screen and (min-width: 641px) {
-  /*put buttons on same line on large screens*/
-  nav > ul > li {
-    display: inline-block;
-  }
-  /*don't display the menu icon on large screens*/
-  .navtoggle li:not(:last-child) {
-    display: inline-block;
-  }
-  .navtoggle li:last-child {
-    display: none;
-  }
-  /*add space back in*/
-  nav > ul {
-    margin: 1em 0
-  }
-}
-
 
 /*set the position of the menu & link it to JS*/
 .navtoggle, .navtoggle.responsive {
@@ -388,7 +381,6 @@ main {
   right: 0;
   top: 2px;
   font-size: 20px;
-  padding-right: 0;
 }
 
 /*style the menu*/
@@ -402,20 +394,39 @@ main {
   text-align: right;
   font-size: 0.75em;
 }
-
 .navtoggle.responsive li:last-child {
   padding: 0 0 10px;
+}
+
+@media only screen and (min-width: 641px) {
+  /*put buttons on same line on large screens*/
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
+  nav > ul {
+   margin: 1em 0
+ }
+  nav > ul > li {
+    display: inline-block;
+    position: relative;
+  }
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+  .navtoggle li:last-child {
+    display: none;
+  }
 }
 
 .icon {
   max-height: 42px;
   margin: 14px;
-}
-
-@media only screen and (min-width: 641px) {
-  .illustration {
-    padding-top: 42px;
-  }
 }
 
 /*****************************************************/
