--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ nav > ul > li > a:focus {
 /*height of the fixed header, so main isn't hidden*/
 
 main {
-  padding-top: 84px;
+  padding-top: 120px;
 }
 
 /*adust for medium screens (50% splits)*/
@@ -318,7 +318,7 @@ main {
     display: table;
   } /*clear the flow so that things aren't jumbling*/
   main {
-    padding-top: 89px;
+    padding-top: 107px;
   }
 }
 /*60:40 split for large screens*/
@@ -427,6 +427,8 @@ main {
 .icon {
   max-height: 42px;
   margin: 14px;
+  text-align: center;
+  margin-left: 0px;
 }
 
 /*****************************************************/
@@ -460,8 +462,6 @@ button.accordion:hover, button.accordion.is-open {
 
 .accordion-content {
   background-color: white;
-  border-left: 1px solid whitesmoke;
-  border-right: 1px solid whitesmoke;
   padding: 0 20px;
   max-height: 0;
   overflow: hidden;
@@ -496,14 +496,11 @@ to {transform: translate(70px,0)}
 }
 
 .float {
-	position:fixed;
-	bottom:15%;
-  right:3%;
   font-size: 1em;
   font-weight: 400;
   padding: 12px 12px;
   background-color: #39a78e;
-  color: #ffffff;
+  color: #ffffff !important;
 	border-radius:50px;
 	text-align:center;
 	box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
@@ -512,7 +509,7 @@ to {transform: translate(70px,0)}
 .float:hover {
   background-color: #2a7a68;
   color: #ffffff;
-text-decoration: none;
+text-decoration: none !important;
 font-weight: 600;
 padding: 16px 16px;
 border-radius: 8px;
