--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ font-weight: 700;
   font-weight: 400;
   font-size: 1.2em;
   padding: 8px 16px;
-  margin: 0px 16px;
+  margin: 16px 16px;
   border-radius: 24px;
   transition-property: padding, border-radius, box-shadow;
   transition-duration: 0.2s;
@@ -114,7 +114,7 @@ font-weight: 400;
   color: #ffffff;
 text-decoration: none;
 font-weight: 600;
-padding: 8px 24px;
+padding: 8px 22px;
 border-radius: 8px;
 box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
@@ -123,7 +123,7 @@ box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
   color: #ffffff;
 text-decoration: none;
 font-weight: 600;
-padding: 8px 24px;
+padding: 8px 22px;
 border-radius: 8px;
 box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
@@ -159,7 +159,7 @@ font-weight: 400;
   color: #ffffff;
 text-decoration: none;
 font-weight: 600;
-padding: 8px 24px;
+padding: 8px 22px;
 border-radius: 8px;
 box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
@@ -169,7 +169,7 @@ box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
   color: #ffffff;
 text-decoration: none;
 font-weight: 600;
-padding: 8px 24px;
+padding: 8px 22px;
 border-radius: 8px;
 box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
 }
@@ -200,6 +200,11 @@ font-weight: 600;
   padding-bottom: 25px;
   border-bottom: 1px solid #dddcd8;
 }
+
+.row2 {
+  padding-bottom: 48px;
+}
+
 /**work**/
 #beyondcomfort .row {
   padding-bottom: 25px;
@@ -259,7 +264,7 @@ nav > ul > li > a {
 /*change to white and underlined when hovering*/
 nav > ul > li > a:hover {
   text-decoration: underline;
-  font-weight: 400;
+  font-weight: 600;
   color: #ffffff !important;
 }
 /*turn bold when pressed*/
@@ -493,34 +498,4 @@ to {transform: translate(70px,0)}
   animation-iteration-count: 4;
   animation-direction: alternate;
   animation-timing-function: ease-in;
-}
-
-.float {
-  font-size: 1em;
-  font-weight: 400;
-  padding: 12px 12px;
-  background-color: #39a78e;
-  color: #ffffff !important;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
-  transition-duration: 0.5s
-}
-.float:hover {
-  background-color: #2a7a68;
-  color: #ffffff;
-text-decoration: none !important;
-font-weight: 600;
-padding: 16px 16px;
-border-radius: 8px;
-box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
-}
-
-@media only screen and (max-width: 641px) {
-	.float {
-    font-size: 0.75em;
-    font-weight: 400;
-    padding: 8px 8px;
-    bottom:60px;
-  }
 }
