--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,114 @@
-
 /*
 color palette:
-gesso white: #dddcd8
-swedish grey: #c8c3bf
-classic navy: #2e3440
-noir (default font): #16171b
-espresso: #5a4c43;
-zomp green (links): #39a78e;
-sea green (visited links): #2a7a68;
-dark brown (active button): #4e423a;
+gesso white: #dddcd8 (divider rows)
+swedish grey: #c8c3bf (secondary buttons)
+noir: #16171b 22,23,27 (default font; nav BG)
+navy: #2e3440 (shadows)
+espresso: #5a4c43 (headers, button hovering)
+zomp green: #39a78e (cartoon animation highlights)
+sea green: #2a7a68 (primary buttons)
+dark brown: #4e423a (active button)
 */
 
-
-/*set default width to include padding & border*/
+/* set default width to include padding & border */
 * {
   box-sizing: border-box;
 }
 
-/*by default images will take up full width of screen*/
+/* by default images will take up full width of screen */
 img {
   width: 100%;
 }
 
-/*some images are way to big. want option to cap them.*/
+/* some images are way to big. want option to cap them. */
 .restrain {
   max-width: 800px;
 }
+
 .super_restrain {
   max-width: 400px;
 }
 
-/*want to center those images.*/
+/* want to center those images. */
 .centered {
   display: block;
   text-align: center;
 }
 
-/*set default typography*/
+/* set default typography */
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', 'Avenir', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
   color: #16171b;
+  background-color: white;
 }
-h1, h2, h3, h4 {
+
+h1,
+h2,
+h3,
+h4 {
   line-height: 1.4;
   color: #5a4c43;
 }
+
 h1 {
   font-size: 2em;
   font-weight: 600;
   text-align: center;
 }
+
 h2 {
   font-size: 1.5em;
   font-weight: 600;
   text-align: center;
 }
+
 h3 {
   font-size: 1.4em;
   font-weight: 400;
 }
+
 h4 {
   font-size: 1.2em;
   font-weight: 400;
 }
+
 li {
   line-height: 2;
 }
-/*hyperlink styling; default to zomp green*/
+
+/* hyperlink styling; default to sea green */
 a {
-  color: #39a78e;
+  color: #2a7a68;
   text-decoration: none;
-  font-weight: 400;
-}
-/*while hovering they are underlined and bolded*/
-a:hover {
-color: #39a78e;
-text-decoration: underline;
-font-weight: 700;
-}
-/*when tabbed they are same as hovering*/
-a:focus {
-color: #39a78e;
-text-decoration: underline;
-font-weight: 700;
+  font-weight: 600;
 }
 
-/*style buttons*/
+/* while hovering they are underlined and bolded */
+a:hover {
+  color: #5a4c43;
+  text-decoration: underline;
+  font-weight: 600;
+}
+
+/* when tabbed they are same as hovering */
+a:focus {
+  color: #5a4c43;
+  text-decoration: underline;
+  font-weight: 600;
+}
+
+/* style buttons */
 .button {
   display: inline-block;
-  background-color: #39a78e;
-  color: #ffffff;
+  background-color: #2a7a68;
+  color: #fff;
   font-weight: 400;
   font-size: 1.2em;
   padding: 8px 16px;
-  margin: 16px 16px;
+  margin: 16px;
   border-radius: 24px;
   transition-property: padding, border-radius, box-shadow;
   transition-duration: 0.2s;
@@ -104,36 +116,40 @@ font-weight: 700;
 }
 
 .button:visited {
-  background-color: #39a78e;
-  color: #ffffff;
-text-decoration: none;
-font-weight: 400;
-}
-.button:hover {
   background-color: #2a7a68;
-  color: #ffffff;
-text-decoration: none;
-font-weight: 600;
-padding: 8px 22px;
-border-radius: 8px;
-box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
+  color: #fff;
+  text-decoration: none;
+  font-weight: 400;
 }
+
+.button:hover {
+  background-color: #5a4c43;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 8px 22px;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(46, 52, 64, 0.5);
+}
+
 .button:active {
-  background-color: #5a4c43 !important;
-  color: #ffffff;
-text-decoration: none;
-font-weight: 600;
-padding: 8px 22px;
-border-radius: 8px;
-box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
+  background-color: #4e423a !important;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 8px 22px;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(46, 52, 64, 0.5);
 }
+
 .button:focus {
-  background-color: #39a78e;
-  color: #ffffff;
-text-decoration: none;
-font-weight: 600;
+  background-color: #5a4c43;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
 }
-/*style CTAs that take you out of app with lighter color*/
+
+/* style CTAs that take you out of app with lighter color */
 .button.contact {
   display: inline-block;
   background-color: #c8c3bf;
@@ -141,7 +157,7 @@ font-weight: 600;
   font-weight: 400;
   font-size: 1.2em;
   padding: 8px 16px;
-  margin: 0px 16px 16px 16px;
+  margin: 0 16px 16px;
   border-radius: 20px;
   transition-property: padding, border-radius, box-shadow;
   transition-duration: 0.2s;
@@ -151,51 +167,59 @@ font-weight: 600;
 .button.contact:visited {
   background-color: #c8c3bf;
   color: #5a4c43;
-text-decoration: none;
-font-weight: 400;
-}
-.button.contact:hover {
-  background-color: #99968a;
-  color: #ffffff;
-text-decoration: none;
-font-weight: 600;
-padding: 8px 22px;
-border-radius: 8px;
-box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
-}
-/*turn espresso when pressed*/
-.button.contact:active {
-  background-color: #5a4c43;
-  color: #ffffff;
-text-decoration: none;
-font-weight: 600;
-padding: 8px 22px;
-border-radius: 8px;
-box-shadow: 0px 2px 2px rgba(46, 52, 64, 0.5);
-}
-.button.contact:focus {
-  background-color: #c8c3bf;
-  color: #5a4c43;
-text-decoration: none;
-font-weight: 600;
+  text-decoration: none;
+  font-weight: 400;
 }
 
-/*layout styling*/
-/*create a wrapper-container to hold layout*/
+.button.contact:hover {
+  background-color: #5a4c43;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 8px 22px;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(46, 52, 64, 0.5);
+}
+
+/* turn espresso when pressed */
+.button.contact:active {
+  background-color: #4e423a;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 8px 22px;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(46, 52, 64, 0.5);
+}
+
+.button.contact:focus {
+  background-color: #5a4c43;
+  color: #5a4c43;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+/* layout styling */
+
+/* create a wrapper-container to hold layout */
 .container {
   padding: 0 15px;
 }
-/*add top margins between sections*/
+
+/* add top margins between sections */
 .row {
   margin: 25px 0;
 }
-/*place a border between sections*/
-/**home**/
+
+/* place a border between sections */
+
+/**  home  **/
 #home .row {
   padding-bottom: 25px;
   border-bottom: 1px solid #dddcd8;
 }
-/**about**/
+
+/**  about  **/
 #about .row {
   padding-bottom: 25px;
   border-bottom: 1px solid #dddcd8;
@@ -205,41 +229,45 @@ font-weight: 600;
   padding-bottom: 48px;
 }
 
-/**work**/
+/**  work  **/
 #beyondcomfort .row {
   padding-bottom: 25px;
   border-bottom: 1px solid #dddcd8;
 }
 
 #social a:hover {
-text-decoration: none;
-opacity: 0.6;
+  text-decoration: none;
+  opacity: 0.6;
+  padding-top: 36px;
 }
 
-/*limit size of logo*/
+/* limit size of logo */
 .logo {
   max-width: 48px;
   margin-top: 16px;
   margin-left: 7px;
 }
+
 .logo:hover {
   max-width: 52px;
 }
 
-/*style header*/
+/* style header */
 header {
-  background-color: rgba(22,23,27,.9);
+  background-color: rgba(22, 23, 27, 0.9);
   padding: 10px 0 4px;
-  box-shadow: 0px 6px 4px rgba(46, 52, 64, 0.5);
+  box-shadow: 0 6px 4px rgba(46, 52, 64, 0.5);
   width: 100%;
   position: fixed;
 }
-/*style nav*/
+
+/* style nav */
 nav {
   display: inline-block;
   width: 100%;
 }
-/*remove bullets and extra margin*/
+
+/* remove bullets and extra margin */
 nav > ul {
   list-style-type: none;
   padding: 0;
@@ -252,113 +280,137 @@ nav > ul > li {
   padding: 0;
 }
 
-/*style text and spacing*/
+/* style text and spacing */
 nav > ul > li > a {
   display: inline-block;
   padding: 0 15px;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 1.2em;
-  color: #f4f3f2 !important;
+  color: #fff !important;
 }
-/*change to white and underlined when hovering*/
+
+/* change to white and underlined when hovering */
 nav > ul > li > a:hover {
   text-decoration: underline;
   font-weight: 600;
-  color: #ffffff !important;
+  color: #fff !important;
 }
-/*turn bold when pressed*/
+
 nav > ul > li > a:active {
-  font-weight: 700;
-  color: #ffffff !important;
+  font-weight: 600;
+  color: #fff !important;
 }
-/*same as hover*/
+
+/* same as hover */
 nav > ul > li > a:focus {
   text-decoration: underline;
   font-weight: 400;
-  color: #ffffff !important;
+  color: #fff !important;
 }
 
-/*press the hero section right up to the header (replace margin with padding)*/
+/* press the hero section right up to the header (replace margin with padding) */
 #hero {
   padding: 20px 0;
   display: block;
   width: 100%;
 }
 
-
-/*this looks crappy but want to remember the general code.
+/* this looks crappy but want to remember the general code.
 .logo:hover {
   box-shadow: 3px 3px 2px rgba(46, 52, 64, 0.5);
   border-radius: 100%;
-}*/
-/*height of the fixed header, so main isn't hidden*/
+} */
 
+/* height of the fixed header, so main isn't hidden */
 main {
   padding-top: 120px;
 }
 
-/*adust for medium screens (50% splits)*/
+/* adust for medium screens (50% splits) */
 @media only screen and (min-width: 640px) {
   header {
     text-align: unset;
-  } /*no longer center header*/
-  nav {
-      width: auto;
-      float: right;
   }
+
+  /* no longer center header */
+  nav {
+    width: auto;
+    float: right;
+  }
+
   .logo {
-    margin: 15px 0px;
-  } /*so that it lines up with nav*/
+    margin: 15px 0;
+  }
+
+  /* so that it lines up with nav */
   .col-md-6 {
     width: 50%;
-  } /*two columns on tablets*/
+  }
+
+  /* two columns on tablets */
   [class*="col-"] {
     float: left;
-    padding: 0px 10px;
-  } /*so columns are side-by-side and spaced*/
+    padding: 0 10px;
+  }
+
+  /* so columns are side-by-side and spaced */
   .row::after {
     content: "";
     clear: both;
     display: table;
-  } /*clear the flow so that things aren't jumbling*/
+  }
+
+  /* clear the flow so that things aren't jumbling */
   main {
     padding-top: 107px;
   }
 }
-/*60:40 split for large screens*/
-@media only screen and (min-width: 1024px) {
-      /*no longer center header*/
-      nav {
-          width: auto;
-          float: right;
-      }
-      .logo {
-        margin: 11px 7px 0px 7px;
-      } /*so that it lines up with nav*/
-      .col-lg-7 {
-        width: 60%;
-      }
-      .col-lg-5 {
-        width: 40%;
-      }
-      [class*="col-"] {
-        float: left;
-        padding: 0px 10px;
-      } /*so columns are side-by-side and spaced*/
-      .row::after {
-        content: "";
-        clear: both;
-        display: table;
-      } /*clear the flow so that things aren't jumbling*/
-      .container {
-        max-width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-      }/*so that content isn't really large*/
-      }
 
-/*can't seem to get this section to not jumble in the table on M screens*/
+/* 60:40 split for large screens */
+@media only screen and (min-width: 1024px) {
+  /* no longer center header */
+  nav {
+    width: auto;
+    float: right;
+  }
+
+  .logo {
+    margin: 11px 7px 0;
+  }
+
+  /* so that it lines up with nav */
+  .col-lg-7 {
+    width: 60%;
+  }
+
+  .col-lg-5 {
+    width: 40%;
+  }
+
+  [class*="col-"] {
+    float: left;
+    padding: 0 16px;
+  }
+
+  /* so columns are side-by-side and spaced */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  /* clear the flow so that things aren't jumbling */
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* so that content isn't really large */
+}
+
+/* can't seem to get this section to not jumble in the table on M screens */
 #research {
   width: 100%;
 }
@@ -369,15 +421,16 @@ main {
   }
 }
 
-/*style toggle menu*/
-/*hide everything except the menu icon*/
+/* style toggle menu */
 
+/* hide everything except the menu icon */
 .navtoggle li:not(:last-child) {
   display: none;
 }
 
-/*set the position of the menu & link it to JS*/
-.navtoggle, .navtoggle.responsive {
+/* set the position of the menu & link it to JS */
+.navtoggle,
+.navtoggle.responsive {
   position: relative;
 }
 
@@ -388,42 +441,49 @@ main {
   font-size: 20px;
 }
 
-/*style the menu*/
+/* style the menu */
 .navtoggle.responsive nav {
   padding: 24px 0 0;
 }
+
 .navtoggle.responsive li {
   display: block;
   padding: 8px 0;
-  border-top: 1px solid rgba(221, 220, 216,0.5);
+  border-top: 1px solid rgba(221, 220, 216, 0.5);
   text-align: right;
   font-size: 0.75em;
 }
+
 .navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
 
 @media only screen and (min-width: 641px) {
-  /*put buttons on same line on large screens*/
+  /* put buttons on same line on large screens */
   header {
     text-align: unset;
     padding: 20px 0 13px;
   }
+
   nav {
     width: auto;
     float: right;
     margin-top: 4px;
   }
+
   nav > ul {
-   margin: 1em 0
- }
+    margin: 1em 0;
+  }
+
   nav > ul > li {
     display: inline-block;
     position: relative;
   }
+
   .navtoggle li:not(:last-child) {
     display: inline-block;
   }
+
   .navtoggle li:last-child {
     display: none;
   }
@@ -433,10 +493,10 @@ main {
   max-height: 42px;
   margin: 14px;
   text-align: center;
-  margin-left: 0px;
+  margin-left: 0;
 }
 
-/*****************************************************/
+/****************************************************   */
 button.accordion {
   width: 100%;
   border: none;
@@ -449,7 +509,7 @@ button.accordion {
   transition: background-color 0.2s linear;
 }
 
-button.accordion:after {
+button.accordion::after {
   content: '\f055';
   font-family: "fontawesome";
   font-size: 14px;
@@ -457,11 +517,12 @@ button.accordion:after {
   float: right;
 }
 
-button.accordion.is-open:after {
+button.accordion.is-open::after {
   content: '\f056';
 }
 
-button.accordion:hover, button.accordion.is-open {
+button.accordion:hover,
+button.accordion.is-open {
   background-color: #dddcd8;
 }
 
@@ -470,13 +531,18 @@ button.accordion:hover, button.accordion.is-open {
   padding: 0 20px;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
-/**************************************/
+/*************************************   */
 @keyframes jumpout {
-from {transform: translate(400px,0);}
-to {transform: translate(70px,0)}
+  from {
+    transform: translate(400px, 0);
+  }
+
+  to {
+    transform: translate(70px, 0);
+  }
 }
 
 #woman {
@@ -488,10 +554,19 @@ to {transform: translate(70px,0)}
 }
 
 @keyframes elementsappear {
-  0% {opacity: 0%;}
-  50% {opacity: 50%;}
-  100% {opacity: 100%;}
+  0% {
+    opacity: 0%;
+  }
+
+  50% {
+    opacity: 50%;
+  }
+
+  100% {
+    opacity: 100%;
+  }
 }
+
 #elements {
   animation-duration: 6s;
   animation-name: elementsappear;
