--- a/css/style.css
+++ b/css/style.css
@@ -574,3 +574,9 @@ button.accordion.is-open {
   animation-direction: alternate;
   animation-timing-function: ease-in;
 }
+
+@media only screen and (max-width: 640px) {
+  #cartoon {
+    text-align: center;
+  }
+}
